# Coding-Challenges-Showcase

./: .gitignore  .gitmodules  README.md  template-pyproject.toml
.github/workflows/: ci-01-dragon.yml
01-Arbol-Genealogico-Dragon/: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  coverage_report.txt  implementation_plan.md  plan.md  pyproject.toml
01-Arbol-Genealogico-Dragon/scripts/: generate_badge.py
01-Arbol-Genealogico-Dragon/src/: __init__.py  config.py  container.py  data_loader.py  exceptions.py  interfaces.py  main.py  models.py  repository.py  ui.py  validators.py  visitors.py
01-Arbol-Genealogico-Dragon/src/arbol_genealogico_dragon.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
01-Arbol-Genealogico-Dragon/src/utils/: __init__.py  logger.py  output.py  ui_logger.py
01-Arbol-Genealogico-Dragon/tests/: conftest.py  test_config.py  test_container.py  test_data_loader.py  test_exceptions.py  test_interfaces.py  test_logger_config.py  test_main.py  test_models.py  test_output.py  test_repository.py  test_ui.py  test_ui_logger.py  test_validators.py  test_visitors.py
