[project]
name = "arbol-genealogico-dragon"
version = "1.0.0"
description = "Sistema de árbol genealógico con validaciones"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "pyright>=1.1.3",
    "safety>=2.3.0",
    "bandit[toml]>=1.7.0",
]

[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", "tests"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = ["-v", "--tb=short", "--cov=src", "--cov-report=term-missing"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.bandit]
# Configuración de Bandit para security scanning
# Excluir tests y archivos de configuración
exclude_dirs = ["tests", ".venv", "venv", "*.egg-info", "build", "dist"]
# Nivel de confianza mínimo para reportar (1-5)
confidence_level = 3
# Nivel de severidad mínimo para reportar (1-5)
severity_level = 3
# Skips para código seguro conocido
skips = ["B101", "B601"]  # B101: assert_used, B601: shell_injection_subprocess
# Archivos a escanear
targets = ["src"]
